--- a/Alarmclock/Alarmclock/Alarmclock.csproj
+++ b/Alarmclock/Alarmclock/Alarmclock.csproj
@@ -41,6 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AlarmClox.cs" />
+    <Compile Include="ClockDisplay.cs" />
+    <Compile Include="NumberDisplay.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
